src/components/screens/initialization/initialization.css
@import '../../../app/mixins.css';

.container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  max-width: 550px;
  margin: 0 auto;
  height: 100%;
}

.headerIcon {
  height: 87px;
}

.header {
  @mixin headingLarge;

  margin-bottom: 15px;
}

.text {
  @mixin contentLargest;

  text-align: center;
  margin-bottom: 30px;
}

.link {
  color: var(--color-link-active);
  cursor: pointer;
}

.button {
  width: 430px;
}

