Fix dark mode

--- a/src/components/screens/initialization/initialization.css
+++ b/src/components/screens/initialization/initialization.css
@@ -18,6 +18,7 @@
   @mixin headingLarge;
 
   margin-bottom: 15px;
+  color: var(--color-maastricht-blue);
 }
 
 .text {
@@ -25,6 +26,7 @@
 
   text-align: center;
   margin-bottom: 30px;
+  color: var(--color-slate-gray)
 }
 
 .link {
